V1.1.2 (#14)
* bug fix with accessing web url
downgraded to Java 11

* bug fix with accessing web url
downgraded to Java 11